tests/conc/reject/wait_nontask.ty
fn main():
    print(str(wait(5)))
